TAJO-1941: PermGen elimination in JDK 8.
Closes #833